# vecmem

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt
benchmarks/: CMakeLists.txt
benchmarks/common/: benchmark_memory_resource.hpp  make_jagged_sizes.cpp  make_jagged_sizes.hpp  make_jagged_vector.cpp  make_jagged_vector.hpp  setup_simple_copy_counters.cpp  setup_simple_copy_counters.hpp  simple_aos_container.hpp  simple_aos_copy_benchmarks.cpp  simple_aos_copy_benchmarks.hpp  simple_soa_container.hpp  simple_soa_copy_benchmarks.cpp  simple_soa_copy_benchmarks.hpp
benchmarks/core/: CMakeLists.txt  benchmark_copy.cpp  benchmark_core.cpp  benchmark_edm_copy.cpp
benchmarks/cuda/: CMakeLists.txt  benchmark_copy.cpp  benchmark_cuda.cpp  benchmark_edm_copy.cpp
benchmarks/googlebenchmark/: CMakeLists.txt
benchmarks/hip/: CMakeLists.txt  benchmark_copy.cpp  benchmark_edm_copy.cpp  benchmark_hip.cpp
benchmarks/sycl/: CMakeLists.txt  benchmark_copy.cpp  benchmark_edm_copy.cpp  benchmark_sycl.cpp
cuda/: CMakeLists.txt
cuda/include/vecmem/memory/: memory_types.hpp
cuda/include/vecmem/utils/: cuda_error_handling.hpp
cuda/src/memory/: device_memory_resource.cpp  host_memory_resource.cpp  managed_memory_resource.cpp
cuda/src/memory/cuda/: arena_interface_memory_resource.cpp  arena_memory_manager.cpp  arena_memory_manager.cu  device_memory_resource.cpp  direct_memory_manager.cpp  (+3 more)
cuda/src/utils/: cuda_error_handling.cpp  cuda_error_handling.cu  cuda_error_handling.hpp  cuda_pooled_event.cpp  cuda_pooled_event.hpp  cuda_wrappers.cpp  cuda_wrappers.hpp  event_pool.cpp  event_pool.hpp  get_device_name.cpp  get_device_name.hpp  opaque_stream.cpp  opaque_stream.hpp  select_device.cpp  select_device.hpp  stream_wrapper.cpp
hip/: CMakeLists.txt
hip/src/memory/: device_memory_resource.cpp  host_memory_resource.cpp  managed_memory_resource.cpp
hip/src/utils/: event_pool.cpp  event_pool.hpp  get_device.cpp  get_device.hpp  get_device_name.cpp  get_device_name.hpp  get_stream.cpp  get_stream.hpp  hip_error_handling.cpp  hip_error_handling.hip  hip_error_handling.hpp  run_on_device.hpp  select_device.cpp  select_device.hpp  stream_wrapper.cpp
metal/: CMakeLists.txt
metal/src/memory/: shared_memory_resource.mm
metal/src/utils/: device_wrapper.mm  get_device.h  get_device.mm  opaque_device.h  opaque_device.hpp
sycl/: CMakeLists.txt
sycl/cmake/: assert_test.sycl  atomic_ref_test.sycl  ext_oneapi_printf_test.sycl  local_accessor_test.sycl  memset_test.sycl  oneapi_printf_test.sycl  vecmem-setup-sycl.cmake  warning_test.sycl
sycl/src/memory/: device_memory_resource.sycl  host_memory_resource.sycl  memory_resource_base.sycl  shared_memory_resource.sycl
tests/: CMakeLists.txt
tests/common/: copy_tests.hpp  copy_tests.ipp  edm_jagged_container.hpp  edm_simple_container.cpp  edm_simple_container.hpp  edm_simple_container_helpers.cpp  edm_simple_container_helpers.hpp  jagged_soa_container.hpp  jagged_soa_container_helpers.cpp  jagged_soa_container_helpers.hpp  memory_resource_name_gen.cpp  memory_resource_name_gen.hpp  memory_resource_test_basic.cpp  memory_resource_test_basic.hpp  memory_resource_test_basic.ipp  memory_resource_test_host_accessible.cpp  memory_resource_test_host_accessible.hpp  memory_resource_test_stress.cpp  memory_resource_test_stress.hpp  memory_resource_test_stress.ipp  simple_soa_container.hpp  simple_soa_container_helpers.cpp  simple_soa_container_helpers.hpp  soa_copy_tests.hpp  soa_copy_tests.ipp  soa_copy_tests_hybrid_jagged.hpp  soa_copy_tests_hybrid_jagged.ipp  soa_device_tests.hpp  soa_device_tests.ipp
tests/common/tests/: test_generic_basic.hpp  test_generic_host_accessible.hpp  test_generic_stress.hpp
tests/core/: CMakeLists.txt  test_core_allocator.cpp  test_core_allocators.cpp  test_core_array.cpp  test_core_arrays.cpp  test_core_atomic_ref.cpp  test_core_binary_page.cpp  test_core_conditional_memory_resource.cpp  test_core_containers.cpp  test_core_contiguous_memory_resource.cpp  test_core_copy.cpp  test_core_debug_memory_resource.cpp  test_core_default_resource.cpp  test_core_device_containers.cpp  test_core_edm.cpp  test_core_edm_buffer.cpp  test_core_edm_copy.cpp  test_core_edm_device.cpp  test_core_edm_host.cpp  test_core_edm_view.cpp  test_core_instrumenting_memory_resource.cpp  test_core_jagged_vector_view.cpp  test_core_memory_resources.cpp  test_core_static_array.cpp  test_core_static_vector.cpp  test_core_terminal_memory_resource.cpp  test_core_tuple.cpp  test_core_unique_alloc_ptr.cpp  test_core_vector.cpp  test_core_vectors.cpp
tests/cuda/: CMakeLists.txt  test_cuda_allocators.cpp  test_cuda_array_of_vector.cpp  test_cuda_atomic_ref.cu  test_cuda_containers.cpp  test_cuda_containers.cu  test_cuda_containers_kernels.cu  test_cuda_containers_kernels.cuh  test_cuda_copy.cpp  test_cuda_edm.cpp  test_cuda_edm.cu  test_cuda_edm_copy.cpp  test_cuda_edm_copy.cu  test_cuda_edm_kernels.cu  test_cuda_edm_kernels.hpp  test_cuda_jagged_vector_view.cpp  test_cuda_jagged_vector_view.cu  test_cuda_jagged_vector_view_kernels.cu  test_cuda_jagged_vector_view_kernels.cuh  test_cuda_memory_resources.cpp  test_cuda_memory_resources.cu
tests/googletest/: CMakeLists.txt
tests/hip/: CMakeLists.txt  test_hip_allocators.cpp  test_hip_atomic_ref.hip  test_hip_containers.cpp  test_hip_containers.hip  test_hip_containers_kernels.hip  test_hip_containers_kernels.hpp  test_hip_copy.cpp  test_hip_edm.cpp  test_hip_edm_copy.cpp  test_hip_edm_kernels.hip  test_hip_edm_kernels.hpp  test_hip_jagged_containers.cpp  test_hip_memory_resources.cpp
tests/metal/: CMakeLists.txt  test_metal_main.mm  test_metal_memory_resources.cpp
tests/sycl/: CMakeLists.txt  test_sycl_allocators.cpp  test_sycl_atomic_ref.sycl  test_sycl_containers.sycl  test_sycl_copy.cpp  test_sycl_edm.sycl  test_sycl_edm_copy.cpp  test_sycl_jagged_containers.sycl  test_sycl_memory_resources.cpp
tests/sycl/cmake/: empty_ubsan.sycl
vitis/: CMakeLists.txt
vitis/src/memory/: device_memory_resource.cpp  host_memory_resource.cpp
vitis/src/utils/: xcl2.cpp
(+382 files in other folders)
